hphp/hack/test/typecheck/reactive/mutable_or_immutable4.php.exp
File "mutable_or_immutable4.php", line 6, characters 21-52:
Parameter cannot have both __Mutable and __MaybeMutable annotations. (Parsing[1002])
